<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/status2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/status"
            android:layout_margin="8dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/upload_button"
                android:layout_margin="48dp"/>
            <Button
                android:text="@string/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="48dp"
                android:id="@+id/status_button" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/force_field"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        android:background="#99FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:max="100"
            android:layout_margin="48dp"/>

        <Button
            android:text="@android:string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/cancel_button" />

        <Button
            android:text="@string/try_to_upload_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/upload2_button" />

        <Button
            android:text="@string/fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/fail_button" />

        <Button
            android:text="@string/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:id="@+id/status2_button" />
    </LinearLayout>
</FrameLayout>

